--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -3,22 +3,27 @@
 
 {% block content %}
 
-<h1>World's best blog platform, no jokes</h1>
+<div class="container stripe">
+  <div class="site-heading">
+    <h1 class="site-heading__heading">
+      World's best blog platform, no jokes
+    </h1>
+  </div>
+</div>
 
-{% if user.is_authenticated %}
-<p> Hello, {{ user.username }}! Want to <a href="{% url 'logout' %}">logout</a>?</p>
-<p> Sure, you can <a href="{% url 'update' %}">make</a> a post</p>
-{% else %}
-<p> Hello, Anonymous! Want to <a href="{% url 'login' %}">login</a>?</p>
-{% endif %}
 
 {% for publication in publications %}
-<hr />
 
-<h2>{{ publication.content.title }}</h2>
-
-<div>
-  {{ publication.content.post|markdownyfy }}
+<div class="publication">
+  <h2 class="publication__title">
+    {{ publication.content.title }}
+  </h2>
+  <div class="publication__info">
+    {{ publication.effective_pub_date }} by {{ publication.author }}
+  </div>
+  <div class="publication__text">
+    {{ publication.content.post|markdownyfy }}
+  </div>
 </div>
 
 {% endfor %}
