--- a/web/templates/web/publication.html
+++ b/web/templates/web/publication.html
@@ -1,21 +1,17 @@
 {% extends "base.html" %}
-{% load app_filters %}
 
 {% block content %}
 
 <div class="container stripe">
   <div class="site-heading">
     <h1 class="site-heading__heading">
-      World's best blog platform, no jokes
+      {{ blog_username }}
     </h1>
   </div>
 </div>
 
-
-{% for publication in publications %}
-
 {% include "web/partials/post.html" with publication=publication %}
 
-{% endfor %}
-
 {% endblock %}
+
+
